--- a/Diffraction wavelength.ipynb
+++ b/Diffraction wavelength.ipynb
@@ -228,29 +228,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2017-03-06T19:24:31.931070",
-     "start_time": "2017-03-06T19:24:31.915414"
-    },
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 1)"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "sympy.fraction(1,2)"
+    "$$\\left( \\frac{\\lambda}{n_{\\mathrm{med}}d_{cc}} \\right)^2 = \\left[ i^2 + \\frac{1}{3}(i + 2j)^2 + \\frac{k^2}{dz^2} \\right]^{-1} $$"
    ]
   },
   {
